--- a/exemplo.html
+++ b/exemplo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>Olá Mundo</H1>
+    <H1>Olá Mundoo</H1>
     <center><img src="./GIF.gif" alt=""></center>
 </body>
 </html>
